# pyqt-examples

./: .gitignore  README.md  pyproject.toml
examples/contacts/: __main__.py  contactitem.py  data.py  delegate.py  mainwindow.py  mainwindow.ui  model.py  placeholderitem.py  placeholderitem.ui
examples/contacts/style/: dark.qss  palette.py
pyqt5-styled/: smainwindow.ui  smainwindow_ui.py
qtstyled/: smainwindow.py
