[tool.poetry]
name = "pyqt5-styled"
version = "0.1.0"
description = "PyQt5 examples of customization by Qt Widgets to support branding or modern designs."
authors = ["Rython Fu <alex4814@126.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.8"
PyQt5 = "^5.15.6"
pyqt5-tools = "^5.15.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
